hard-gists/4358668/run.log
=== Docker Run Log for 4358668 ===
Started at: Mi 29. Okt 14:36:21 CET 2025

[2025-10-29 14:36:21] START: Running container for 4358668
[2025-10-29 14:36:22] SUCCESS: Container fa428018ee2f3f13385b15792585bee1d19868eb93cabe360ce131c67d20514f started for 4358668
=== Container logs for 4358668 ===
  File "/snippet.py", line 126
    print "Now look at the file 'sample.log'"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4358668 ===
[2025-10-29 14:36:24] INFO: Container fa428018ee2f3f13385b15792585bee1d19868eb93cabe360ce131c67d20514f has stopped
